--- a/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/modules/custom/revenant_page/revenant_page.routing.yml
@@ -7,7 +7,7 @@ revenant_page.get:
 
 
 test_api.post:
-  path: 'revenant_page/post'
+  path: 'revenant_page/page'
   defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_example' }
   methods:  [POST]
   requirements:
