post controller creates page and default page content

--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -8,7 +8,8 @@ revenant_page.get:
 
 test_api.post:
   path: 'revenant_page/page'
-  defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_example' }
+  defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page' }
   methods:  [POST]
   requirements:
     _access: 'TRUE'
+
