--- a/config/staging/field.storage.node.field_new_content.yml
+++ b/config/staging/field.storage.node.field_new_content.yml
@@ -1,16 +1,16 @@
-uuid: cbfadfa4-454e-430b-a50f-6397ce9af5b3
+uuid: de1acb03-dc26-4273-81ff-bfa54a34d654
 langcode: en
 status: true
 dependencies:
   module:
     - node
-    - text
 id: node.field_new_content
 field_name: field_new_content
 entity_type: node
-type: text_with_summary
-settings: {  }
-module: text
+type: string_long
+settings:
+  case_sensitive: false
+module: core
 locked: false
 cardinality: 1
 translatable: true
