--- a/config/staging/views.view.revenant_content.yml
+++ b/config/staging/views.view.revenant_content.yml
@@ -3,10 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_new_content
     - field.storage.node.field_page
     - field.storage.node.field_page_url
+    - field.storage.node.field_xpath
     - node.type.revenant_content_item
   module:
+    - hal
     - node
     - rest
     - serialization
@@ -270,6 +273,131 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_xpath:
+          id: field_xpath
+          table: node__field_xpath
+          field: field_xpath
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_new_content:
+          id: field_new_content
+          table: node__field_new_content
+          field: field_new_content
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: basic_string
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: true
+          plugin_id: field
       filters:
         status:
           value: '1'
@@ -356,8 +484,10 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_new_content'
         - 'config:field.storage.node.field_page'
         - 'config:field.storage.node.field_page_url'
+        - 'config:field.storage.node.field_xpath'
   rest_export_1:
     display_plugin: rest_export
     id: rest_export_1
@@ -375,6 +505,7 @@ display:
         type: serializer
         options:
           formats:
+            hal_json: hal_json
             json: json
       row:
         type: data_field
@@ -383,6 +514,18 @@ display:
             title:
               alias: ''
               raw_output: false
+            field_page:
+              alias: ''
+              raw_output: false
+            field_page_url:
+              alias: ''
+              raw_output: false
+            field_xpath:
+              alias: ''
+              raw_output: false
+            field_new_content:
+              alias: ''
+              raw_output: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -393,5 +536,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_new_content'
         - 'config:field.storage.node.field_page'
         - 'config:field.storage.node.field_page_url'
+        - 'config:field.storage.node.field_xpath'
