--- a/config/staging/core.entity_form_display.node.revenant_content_item.default.yml
+++ b/config/staging/core.entity_form_display.node.revenant_content_item.default.yml
@@ -3,42 +3,39 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.revenant_content_item.body
     - field.field.node.revenant_content_item.field_new_content
+    - field.field.node.revenant_content_item.field_old_content
     - field.field.node.revenant_content_item.field_page
     - field.field.node.revenant_content_item.field_xpath
     - node.type.revenant_content_item
   module:
     - path
-    - text
 id: node.revenant_content_item.default
 targetEntityType: node
 bundle: revenant_content_item
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 31
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-    third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 2
     settings: {  }
     third_party_settings: {  }
   field_new_content:
-    weight: 34
+    weight: 26
     settings:
-      rows: 9
-      summary_rows: 3
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: text_textarea_with_summary
+    type: string_textarea
+  field_old_content:
+    weight: 27
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
   field_page:
-    weight: 32
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -46,7 +43,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_xpath:
-    weight: 33
+    weight: 8
     settings:
       size: 60
       placeholder: ''
@@ -54,31 +51,31 @@ content:
     type: string_textfield
   path:
     type: path
-    weight: 30
+    weight: 5
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 3
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 4
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
