--- a/config/staging/core.entity_view_display.node.revenant_content_item.default.yml
+++ b/config/staging/core.entity_view_display.node.revenant_content_item.default.yml
@@ -3,45 +3,43 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.revenant_content_item.body
     - field.field.node.revenant_content_item.field_new_content
+    - field.field.node.revenant_content_item.field_old_content
     - field.field.node.revenant_content_item.field_page
     - field.field.node.revenant_content_item.field_xpath
     - node.type.revenant_content_item
   module:
-    - text
     - user
 id: node.revenant_content_item.default
 targetEntityType: node
 bundle: revenant_content_item
 mode: default
 content:
-  body:
-    label: hidden
-    type: text_default
-    weight: 101
-    settings: {  }
-    third_party_settings: {  }
   field_new_content:
-    weight: 104
+    weight: 3
     label: above
     settings: {  }
     third_party_settings: {  }
-    type: text_default
+    type: basic_string
+  field_old_content:
+    weight: 4
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
   field_page:
-    weight: 102
+    weight: 1
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
   field_xpath:
-    weight: 103
+    weight: 2
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-  links:
-    weight: 100
-hidden: {  }
+hidden:
+  links: true
