--- a/config/staging/field.field.node.revenant_content_item.field_new_content.yml
+++ b/config/staging/field.field.node.revenant_content_item.field_new_content.yml
@@ -1,12 +1,10 @@
-uuid: 379159b3-f3ee-4c0a-995b-fe9c99700f0f
+uuid: 6b5a3bc7-667b-48da-81ef-982cae6e293c
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_new_content
     - node.type.revenant_content_item
-  module:
-    - text
 id: node.revenant_content_item.field_new_content
 field_name: field_new_content
 entity_type: node
@@ -17,6 +15,5 @@ required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
-settings:
-  display_summary: false
-field_type: text_with_summary
+settings: {  }
+field_type: string_long
