--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -11,7 +11,7 @@ page_content.post:
   defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page_content' }
   methods:  [POST]
   requirements:
-    _module_dependencies: 'simple_oauth'
+    _user_is_logged_in: 'TRUE'
   options:
-    _auth: ['oauth2']
+    _auth: [ 'basic_auth', 'oauth' ]
 
