routning.yml changes  oath2 options

--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -13,5 +13,5 @@ page_content.post:
   requirements:
     _user_is_logged_in: 'TRUE'
   options:
-    _auth: [ 'basic_auth', 'oauth' ]
+    _auth: [ 'basic_auth', 'oauth2' ]
 
