changed revenant page post to require oauth2

--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -4,7 +4,9 @@ page.post:
   defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page' }
   methods:  [POST]
   requirements:
-    _access: 'TRUE'
+    _user_is_logged_in: 'TRUE'
+  options:
+    _auth: [ 'basic_auth', 'oauth2' ]
 
 page_content.post:
   path: 'revenant_page/page_content'
