removed .idea from git

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ credentials/
 ./.DS_Store
 webroot/themes/.DS_Store
 
-../.idea/
+.idea/
 
 # Ignore configuration files that may contain sensitive information.
 webroot/sites/*/settings.local.php
