--- a/webroot/.htaccess
+++ b/webroot/.htaccess
@@ -138,6 +138,13 @@ AddEncoding gzip svgz
   RewriteCond %{REQUEST_URI} !=/favicon.ico
   RewriteRule ^ index.php [L]
 
+######  CORS   ########
+
+Header set Access-Control-Allow-Origin "*"
+
+#########################
+
+
   # For security reasons, deny access to other PHP files on public sites.
   # Note: The following URI conditions are not anchored at the start (^),
   # because Drupal may be located in a subdirectory. To further improve
