added authentication path for test in page module

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,4 @@ webroot/sites/*/services*.yml
 webroot/sites/*/development.services.yml
 
 webroot/sites/default/files
-
-revenant/credentials/credentials.js
+webroot/modules/custom/revenant_page/credentials.json
