--- a/config/staging/core.entity_view_display.node.revenant_content_item.teaser.yml
+++ b/config/staging/core.entity_view_display.node.revenant_content_item.teaser.yml
@@ -17,5 +17,7 @@ content:
   links:
     weight: 100
 hidden:
+  field_new_content: true
+  field_old_content: true
   field_page: true
   field_xpath: true
