--- a/config/staging/rest.resource.entity.node.yml
+++ b/config/staging/rest.resource.entity.node.yml
@@ -26,13 +26,13 @@ configuration:
       - hal_json
       - json
     supported_auth:
-      - basic_auth
+      - oauth2
   POST:
     supported_formats:
       - hal_json
       - json
     supported_auth:
-      - basic_auth
+      - oauth2
   PATCH:
     supported_formats:
       - hal_json
