--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,4 @@ webroot/sites/*/services*.yml
 webroot/sites/*/development.services.yml
 
 webroot/sites/default/files
-webroot/modules/custom/revenant_page/config/install/revenant_page.setttings.yml
+webroot/modules/custom/revenant_page/config/install/revenant_page.settings.yml
