--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ credentials/
 ./.DS_Store
 webroot/themes/.DS_Store
 
-.idea/
+.idea
+.idea/*
 
 # Ignore configuration files that may contain sensitive information.
 webroot/sites/*/settings.local.php
