change ajax call to post and add .idea to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ credentials/
 webroot/themes/.DS_Store
 
 .idea
-.idea/*
+**/.idea/*
 
 # Ignore configuration files that may contain sensitive information.
 webroot/sites/*/settings.local.php
