--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -11,7 +11,7 @@ page.post:
   defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page' }
   methods:  [POST]
   requirements:
-    _user_is_logged_in: 'FALSE'
+    _user_is_logged_in: 'TRUE'
   options:
     _auth: [ 'basic_auth', 'oauth2' ]
 
