--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -7,11 +7,11 @@ page.post:
     _access: 'TRUE'
 
 page.post:
-  path: 'revenant_page/page'
-  defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page' }
+  path: 'revenant_page/page_create'
+  defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page_create' }
   methods:  [POST]
   requirements:
-    _user_is_logged_in: 'TRUE'
+    _user_is_logged_in: 'FALSE'
   options:
     _auth: [ 'basic_auth', 'oauth2' ]
 
