--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -1,10 +1,10 @@
-
-page.post:
-  path: 'revenant_page/page_auth'
-  defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_creds' }
-  methods:  [POST]
-  requirements:
-    _access: 'TRUE'
+#
+#page.post:
+#  path: 'revenant_page/page_auth'
+#  defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_creds' }
+#  methods:  [POST]
+#  requirements:
+#    _access: 'TRUE'
 
 page.post:
   path: 'revenant_page/page_create'
