change in .htaccess

--- a/webroot/.htaccess
+++ b/webroot/.htaccess
@@ -140,7 +140,7 @@ AddEncoding gzip svgz
 
 ######  CORS   ########
 
-Header set Access-Control-Allow-Origin "*"
+#Header set Access-Control-Allow-Origin "*"
 
 #########################
 
