--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -24,3 +24,12 @@ page_content.post:
   options:
     _auth: [ 'basic_auth', 'oauth2' ]
 
+page_content.post_image:
+  path: 'revenant_page/page_content/image'
+  defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page_content_image' }
+  methods:  [POST]
+  requirements:
+    _user_is_logged_in: 'TRUE'
+  options:
+    _auth: [ 'basic_auth', 'oauth2' ]
+
