added query string param in image routing

--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -25,7 +25,7 @@ page_content.post:
     _auth: [ 'basic_auth', 'oauth2' ]
 
 page_image.post:
-  path: 'revenant_page/page_content/image'
+  path: 'revenant_page/page_content/image?{query}'
   defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page_content_image' }
   methods:  [POST]
   requirements:
