fix logger route

--- a/webroot/modules/custom/revenant_page/revenant_page.services.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.services.yml
@@ -1,6 +1,5 @@
 services:
-
   logger.mylog:
-    class: \Drupal\revenant_page\Controller\RevenantPageLogger
+    class: \Drupal\revenant_page\src\Logger\RevenantPageLogger
     tags:
       - { name: logger }
