--- a/webroot/modules/custom/revenant_page/revenant_page.services.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.services.yml
@@ -1,5 +1,5 @@
 services:
   logger.mylog:
-    class: \Drupal\revenant_page\src\Logger\RevenantPageLogger
+    class: \Drupal\revenant_page\Logger\RevenantPageLogger
     tags:
       - { name: logger }
