--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -29,7 +29,5 @@ page_image.post:
   defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page_content_image' }
   methods:  [GET]
   requirements:
-    _user_is_logged_in: 'TRUE'
-  options:
-    _auth: [ 'basic_auth', 'oauth2' ]
+    _access: 'TRUE'
 
