added auth back to routing for image post

--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -24,10 +24,12 @@ page_content.post:
   options:
     _auth: [ 'basic_auth', 'oauth2' ]
 
-#page_image.post:
-#  path: 'revenant_page/page_content/image'
-#  defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page_content_image' }
-#  methods:  [GET]
-#  requirements:
-#    _access: 'TRUE'
+page_image.post:
+  path: 'revenant_page/page_content/image'
+  defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page_content_image' }
+  methods:  [GET]
+  requirements:
+    _user_is_logged_in: 'TRUE'
+  options:
+    _auth: [ 'basic_auth', 'oauth2' ]
 
