routing and query change

--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -27,9 +27,7 @@ page_content.post:
 page_image.post:
   path: 'revenant_page/page_content/image'
   defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page_content_image' }
-  methods:  [POST]
+  methods:  [GET]
   requirements:
-    _user_is_logged_in: 'TRUE'
-  options:
-    _auth: [ 'basic_auth', 'oauth2' ]
+    _access: 'TRUE'
 
