take out auth requirement for time being

--- a/webroot/modules/custom/revenant_page/revenant_page.routing.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.routing.yml
@@ -29,8 +29,5 @@ page_image.post:
   defaults: { _controller: '\Drupal\revenant_page\Controller\RevenantPageController::post_page_content_image' }
   methods:  [POST]
   requirements:
-    _csrf_token: 'TRUE'
-    _user_is_logged_in: 'TRUE'
-  options:
-    _auth: [ 'oauth2' ]
+    _access: 'TRUE'
 
