change logger structure

--- a/webroot/modules/custom/revenant_page/revenant_page.services.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.services.yml
@@ -1,7 +1,4 @@
 services:
-
-
-  logger.mylog:
+  revenant.logger:
     class: \Drupal\revenant_page\Logger\RevenantPageLogger
-    tags:
-      - { name: logger }
+    arguments: ['@logger.factory']
