changed class constructor

--- a/webroot/modules/custom/revenant_page/revenant_page.services.yml
+++ b/webroot/modules/custom/revenant_page/revenant_page.services.yml
@@ -1,4 +1,4 @@
 services:
-  revenant.logger:
+  revenant_logger:
     class: \Drupal\revenant_page\Logger\RevenantPageLogger
     arguments: ['@logger.factory']
