--- a/webroot/revenant/package.json
+++ b/webroot/revenant/package.json
@@ -6,7 +6,8 @@
   "repository": "https://github.com/HelloWorldDevs/revenant-api.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp"
+    "start": "gulp",
+    "build": "gulp build"
   },
   "author": "Hello World Devs",
   "license": "ISC",
